# PyBulletFleet

./: .env.defaults  .gitignore  .gitleaks.toml  .pip-audit-ignore.txt  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGELOG_COLLISION_MODE_V2.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  PERFORMANCE_REPORT.md  Py Bullet Collision Detection Design Summary.docx  README.md  README_ja.md  benchmark_compare_1000agents.json  benchmark_results.txt  benchmark_results_1000agents_10.0s.json  benchmark_results_1000agents_3.0s_collision_3d_full.json  benchmark_results_1000agents_5.0s_collision_3d_full.json  benchmark_results_100agents_10.0s.json  benchmark_results_100agents_2.0s.json  benchmark_results_100agents_5.0s.json  benchmark_results_100agents_5.0s_no_collision.json  benchmark_results_2000agents_10.0s.json  benchmark_results_500agents_10.0s.json  benchmark_sweep_10.0s.json  benchmark_sweep_3.0s.json  benchmark_sweep_5.0s.json  debug_path_orientation.py  memo.txt  pre-release.sh  publish-release.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  setup_skills.sh
.claude/: skills
.github/: copilot-instructions.md
benchmark/: COLLISION_BENCHMARK_RESULTS.md  COLLISION_DETECTION_METHODS_ANALYSIS.md  COLLISION_METHODS_ANALYSIS.md  COLLISION_METHODS_CONFIG_BASED_RESULTS.md  COLLISION_METHODS_REALISTIC_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_REPORT.md  README.md  README_COLLISION.md  arm_benchmark.py  batch_diff_perf.py  batch_omni_perf.py  batch_perf.py  benchmark_config.yaml  benchmark_results_1000agents_10.0s_collision_3d_full.json  collision_check_profile.py  collision_detection_methods_benchmark.py  collision_methods_config_based.py  collision_methods_realistic.py  collision_methods_with_movement.py  mobile_benchmark.py  performance_benchmark.py  run_benchmark.py  tools.py
config/: 100robots_config.yaml  README.md  benchmark_physics_on_contact.yaml  config.yaml  config_hybrid.yaml  config_physics_off.yaml  config_physics_on.yaml  cube_patrol_config.yaml
core/: core_simulation.py  data_monitor.py  tools.py
docker/: .dockerignore  .env.example  Dockerfile.jazzy  Dockerfile.pip-test  Dockerfile.rmf_demos  README.md  batch_check.py  docker-compose.rmf.yaml  docker-compose.yaml  download_fuel_models.py  rmf_dispatch_check.py  rmf_smoke_check.py  ros_entrypoint.sh  test_batch.sh  test_integration.sh  test_rmf_dispatch_e2e.sh  test_rmf_e2e.sh  test_rmf_smoke.sh
docs/: AGENT_PROFILING_RESULTS.md  COLLISION_DETECTION_DESIGN.md  COLLISION_DETECTION_DESIGN_v3.md  COLLISION_TEST_DESIGN.md  DEVELOPMENT_HISTORY.md  DIFFERENTIAL_ANALYSIS.md  IMPLEMENTATION_CORRECTION.md  IMPLEMENTATION_STATUS.md  LOGGING_UTILS.md  MEMORY_PROFILING_GUIDE.md  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_SUMMARY_JA.md  REALTIME_SYNC_DESIGN.md  TPI_SLERP_ROTATION.md  conf.py  feature5_analysis.md  index.md  per_object_collision_check_2d.md  requirements-docs.txt  roadmap.md  spatial_hash_cell_size_modes.md
example/: 100robots_demo.py  profiling_demo.py  (+3 more)
ros2_bridge/pybullet_fleet_msgs/: CMakeLists.txt  package.xml
ros2_bridge/pybullet_fleet_msgs/action/: ExecuteAction.action
ros2_bridge/pybullet_fleet_msgs/msg/: ExecuteActionGoal.msg  FleetGoal.msg  FleetState.msg  RobotGoal.msg  RobotState.msg
ros2_bridge/pybullet_fleet_msgs/srv/: AttachObject.srv  FleetNavigate.srv
(+528 files in other folders)
